--- a/style.css
+++ b/style.css
@@ -2,4 +2,10 @@ h1 {
     text-align: center;
     font-size: 40;
     background-color: green;
+    background-color: cyan;
+}
+
+h5 {
+    color: "red";
+    font-size: 100;
 }
