--- a/style.css
+++ b/style.css
@@ -1,11 +1,18 @@
 h1 {
-    text-align: center;
-    font-size: 40;
-    background-color: green;
-    background-color: cyan;
+  text-align: center;
+  font-size: 40;
+  background-color: green;
 }
 
 h5 {
+  background-color: green;
     color: "red";
     font-size: 100;
+    }
+
+
+
+p {
+  background-color: red;
+  color: yellowgreen;
 }
